# smart-estate

./: Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
src/asari_automation_api/: asari.py  auth.py  config.py  llm.py  main.py
src/asari_automation_api/api/: auth.py  config.py  deps.py  main.py
src/asari_automation_api/api/routers/: asari.py
src/asari_automation_api/db/: engine.py  models.py
src/asari_automation_api/integrations/asari/: authorizer.py  crm_service.py  llm.py
src/asari_automation_api/repositories/: asari_credentials.py  users.py
src/estmate_api/: asari.py  auth.py  config.py  llm.py  main.py  models.py
src/smart_estate/: config.py
src/smart_estate/api/: auth.py  deps.py  main.py  schemas.py
src/smart_estate/api/routers/: asari.py
src/smart_estate/db/: engine.py  models.py
src/smart_estate/integrations/asari/: crm_service.py  exceptions.py  llm.py  models.py
src/smart_estate/repositories/: asari_credentials.py  asari_phonecalls.py  exceptions.py  users.py
tests/integration/: conftest.py  test_client_requirements_from_text.py
tests/integration/integrations/asari/llm/: test_client_requirements_from_text.py
tests/integration/repositories/: conftest.py
tests/integration/repositories/asari_credentials/: conftest.py  test_get_by_user_id.py  test_save_credentials.py
tests/integration/repositories/asari_phonecalls/: conftest.py  test_save_phonecall.py
tests/integration/repositories/user_repository/: conftest.py  test_get_user_by_api_key.py
