[project]
name = "estmate-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Damian Wąsik", email = "damianwasik98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asari-api-client",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.20",
    "langchain-groq>=0.3.0",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
estmate-api = "estmate_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
asari-api-client = { path = "../asari-api-client", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-sugar>=1.0.0",
]
