[project]
name = "asari-automation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Damian Wąsik", email = "damianwasik98@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "asari-api-client",
  "asyncpg>=0.30.0",
  "cryptography>=44.0.2",
  "fastapi[standard]>=0.115.11",
  "langchain>=0.3.20",
  "langchain-groq>=0.3.0",
  "pydantic-settings>=2.8.1",
  "sqlmodel>=0.0.24",
]

[project.scripts]
asari-automation-api = "asari_automation_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "factory-boy>=3.3.3",
  "faker>=37.1.0",
  "greenlet>=3.1.1",
  "ipython>=9.0.2",
  "polyfactory>=2.20.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-sugar>=1.0.0",
  "pytest-xdist>=3.6.1",
  "testcontainers[postgres]>=4.9.2",
]

[tool.uv.sources]
asari-api-client = { path = "../asari-api-client", editable = true }
